--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -4,9 +4,9 @@
         <div class="bg-white shadow rounded overflow-hidden">
             <div class="px-3 pt-0 pb-4" style="background-image: url({{this.teacher.bground}})">
                 <div class="media align-items-end">
-                    <div class="profile mr-3 mt-3">
+                    <div class="mr-3 mt-3">
                         <img src="{{this.teacher.avatar}}" alt="This's avatar" width="350" class="rounded-circle mb-2 img-thumbnail">
-                        <a href="/profile/edit?id=1" class="btn btn-outline-dark btn-lg btn-block"><i class="fa fa-edit">Edit profile</i></a>
+                        <a href="/teacher/profile/edit?id={{this.teacher.teacherID}}" class="btn btn-outline-dark btn-lg btn-block"><i class="fa fa-edit">Edit profile</i></a>
                     </div>
                 </div>
                 <div class="media-body mb-5 text-white mt-3">
