--- a/views/vwTeacher/addCourse.hbs
+++ b/views/vwTeacher/addCourse.hbs
@@ -18,7 +18,7 @@
             </blockquote>
           </div>
           <div class="align-items-center text-center">
-            <p class="font-italic"><strong>Scott Hayden</strong></p>
+            <p class="font-italic"><strong>- Scott Hayden</strong></p>
           </div>
           <form
             action="/teacher/addCourse"
@@ -40,9 +40,9 @@
                   />
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-4">
                 <div class="form-group">
-                  <label for="title">Instructor</label>
+                  <label for="instructor">Instructor</label>
                   <input
                     type="text"
                     name="instructor"
@@ -54,33 +54,13 @@
                   />
                 </div>
               </div>
-              <div class="col-md-3">
-                <div class="form-group">
-                  <label for="title">Title</label>
-                  <input
-                    type="text"
-                    name="title"
-                    class="form-control"
-                    placeholder=""
-                    id="title"
-                    required
-                  />
+                <div class="col-md-2">
+                    <label for="teacherNumber">Instructor ID:</label>
+                    <div class="form-group">
+                        <input class="form-control" name="teacherNumber" type="text" placeholder="{{this.teacher.teacherID}}" value="{{this.teacher.teacherID}}" id="instructorID" readonly/>
+                    </div>
                 </div>
-              </div>
-              <div class="col-md-3">
-                <div class="form-group">
-                  <label for="courseID">Course ID</label>
-                  <input
-                    type="text"
-                    name="courseID"
-                    class="form-control"
-                    placeholder="e.g. 1,2,3,..."
-                    id="courseID"
-                    required
-                  />
-                </div>
-              </div>
-              <div class="col-md-3">
+              <div class="col-md-6">
                 <div class="form-group">
                   <label for="selectCatID">Categories</label>
                   <select class="form-control" id="selectCatID" name="catID">
@@ -120,50 +100,20 @@
                     class="form-control"
                     placeholder="e.g. 100000VND..."
                     id="promotion"
-                    required
                   />
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-4">
                 <label for="lec_num">Number of lectures</label>
                 <div class="form-group">
-
-                  <input name="lec_num" type="number" min="1" step="1" />
+                  <input class="form-control" name="lec_num" type="number" min="1" step="1" />
                 </div>
               </div>
-              <div class="col-md-3">
-                <label for="student_num">Number of students</label>
-                <div class="form-group">
-
-                  <input name="student_num" type="number" min="1" step="1" />
-                </div>
               </div>
-              <div class="col-md-3">
-                <label for="teacherNumber">Instructor ID:</label>
-                <div class="form-group">
-
-                  <input
-                    name="teacherNumber"
-                    type="text"
-                    placeholder="{{this.teacher.teacherID}}"
-                    value="{{this.teacher.teacherID}}"
-                    readonly
-                  />
-                </div>
-              </div>
-              <div class="col-md-3">
-                <label for="lec_num">Rating</label>
-                <div class="form-group">
-
-                  <input name="rating_num" type="number" min="1" step="1" />
-                </div>
-              </div>
-
-            </div>
-            <div class="row">
+            <div class="row text-center">
               <div class="col-md-12">
                 <div class="form-group first">
-                  <label for="Files">Course Image</label>
+                  <label for="Files" style="font-size: 32px;" class="font-weight-bold mb-3">Course Image</label>
                   <div class="file-upload">
                     <button
                       class="file-upload-btn"
@@ -196,23 +146,10 @@
                       </div>
                     </div>
                   </div>
-                  <label for="email">Description</label>
+                    <label for="description" style="font-size: 32px;" class="font-weight-bold mt-3 mb-3">Description</label>
                   <textarea name="description" required>
                   </textarea>
                 </div>
-              </div>
-            </div>
-            <div class="col-md-1" style="visibility:hidden">
-              <label for="hidden">Hidden</label>
-              <div class="form-group">
-
-                <input
-                  name="hidden"
-                  type="text"
-                  placeholder="1"
-                  value="1"
-                  readonly
-                />
               </div>
             </div>
             <div class="d-flex justify-content-between">
