Full admin route and service, register, login auth, update routes and services

--- a/views/vwAccount/login.hbs
+++ b/views/vwAccount/login.hbs
@@ -30,14 +30,13 @@
                 <form action="" method="post" >
                     <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
                         <p class="lead fw-normal mb-0 me-3">Sign in with</p>
-                        <button type="button" class="btn btn-primary btn-floating mx-1">
+
+                        <a href="#!" class="btn btn-primary btn-floating mx-1">
                             <i class="fa fa-facebook-official"></i>
-                        </button>
-
-                        <button type="button" class="btn btn-primary btn-floating mx-1 text-danger" >
+                        </a>
+                        <a href="/google" class="btn btn-primary btn-floating mx-1 text-danger">
                             <i class="fa fa-google"></i>
-                        </button>
-
+                        </a>
 
                     </div>
 
