--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -2,11 +2,11 @@
 <div class="row rounded-14.5 shadow-lg rounded-20 border-info">
     <div class="col-lg-12 mx-auto mt-3">
         <div class="bg-white shadow rounded overflow-hidden">
-            <div class="px-3 pt-0 pb-4" style="background-image: url({{this.teacher.bground}})">
+            <div class="px-3 pt-0 pb-4" style="background-image: url(https://drive.google.com/uc?export=view&id={{this.teacher.bground}})">
                 <div class="media align-items-end">
                     <div class="mr-3 mt-3">
-                        <img src="{{this.teacher.avatar}}" alt="This's avatar" width="350" class="rounded-circle mb-2 img-thumbnail">
-                        <a href="/teacher/profile/edit?id={{this.teacher.teacherID}}" class="btn btn-outline-dark btn-lg btn-block"><i class="fa fa-edit">Edit profile</i></a>
+                        <img src="https://drive.google.com/uc?export=view&id={{this.teacher.avatar}}" alt="This's avatar" width="350" class="rounded-circle mb-2 img-thumbnail">
+                        
                     </div>
                 </div>
                 <div class="media-body mb-5 text-white mt-3">
@@ -15,8 +15,8 @@
                 </div>
             </div>
         </div>
-        <div class="bg-light p-4 d-flex justify-content-end text-center">
-            <ul class="list-inline mb-0" style="color: black;">
+        <div class="bg-light p-4 d-flex justify-content-end">
+            <div class="list-inline mb-0" style="color: black;">
                 <li class="list-inline-item">
                     <h5 class="font-weight-bold mb-0 d-block">{{this.teacher.numCourses}}</h5><small class="text-muted"> <i class="fa fa-book mr-1"></i>Courses</small>
                 </li>
@@ -26,16 +26,13 @@
                 <li class="list-inline-item">
                     <h5 class="font-weight-bold mb-0 d-block">{{this.teacher.reviews}}</h5><small class="text-muted"> <i class="fa fa-star mr-1" style="color: yellowgreen">Reviews</i></small>
                 </li>
-            </ul>
+<a href="/teacher/profile/edit?id={{this.teacher.teacherID}}" class="btn btn-outline-dark btn-lg btn-block"><i class="fa fa-edit">Edit profile</i></a>
+            </div>
         </div>
         <div class="px-4 py-3">
             <h4 id="#about" class="mb-1">About</h4>
             <div class="p-4 rounded shadow-sm bg-light">
-                <p class="font-italic mb-0">(Co the them truong about vao phan What u see is quat du get chua lam :3 )</p>
-                <p class="font-italic mb-0">Web Developer</p>
-                <p class="font-italic mb-0">HCMUSSSSSSSS</p>
-                <p class="font-italic mb-0">Song o Tay Ninh</p>
-                <p class="font-italic mb-0">Giao vien sieu cap vo dich giang phat hieu ngay khoa hoc sieu re sales 99%!!!!</p>
+                {{this.teacher.description}}
             </div>
         </div>
         <div class="py-4 px-4">
