--- a/views/layouts/CreateCourseLayout.hbs
+++ b/views/layouts/CreateCourseLayout.hbs
@@ -14,15 +14,19 @@
             font-size: 14px;
         }
     </style>
-    <script>
-        const formElem = document.querySelector('form');
-        formElem.addEventListener('submit', async (e) => {
-            e.preventDefault();
-            await fetch('/addCourse', {
-                method: 'POST',
-                body: new FormData(formElem),
-            });
-        });</script>
+<!--    <script>-->
+<!--        // import { dirname } from 'path';-->
+<!--        // import { fileURLToPath } from 'url';-->
+<!--        const formElem = document.querySelector('form');-->
+<!--        formElem.addEventListener('submit', async (e) => {-->
+<!--            e.preventDefault();-->
+<!--            // const __dirname = dirname(fileURLToPath(import.meta.url));-->
+<!--            console.log(__dirname);-->
+<!--            await fetch('/add', {-->
+<!--                method: 'POST',-->
+<!--                body: new FormData(formElem),-->
+<!--            });-->
+<!--        });</script>-->
     <script src="https://cdn.tiny.cloud/1/ia81okpopglafbfo3qtv7pzo8ep13mc3umojyde5ixoe0tgx/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
     <script>
         tinymce.init({
