--- a/views/vwTeacher/addCourse.hbs
+++ b/views/vwTeacher/addCourse.hbs
@@ -154,13 +154,13 @@
             </div>
             <div class="d-flex justify-content-between">
               <div>
-                <button type="submit" class="btn btn-outline-light">
+                <button type="submit" class="btn btn-outline-light" formaction="/teacher/profile?id={{this.teaher.teacherID}}">
                   <i class="fa fa-backward" aria-hidden="true"></i>
                   Cancel
                 </button>
               </div>
               <div>
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-primary" formaction="/teacher/addCourse?id={{this.teacher.teacherID}}">
                   <i class="fa fa-plus-circle" aria-hidden="true"></i>
                   Add Course
                 </button>
