--- a/views/vwTeacher/profile.hbs
+++ b/views/vwTeacher/profile.hbs
@@ -5,7 +5,7 @@
             <div class="px-3 pt-0 pb-4" style="background-image: url(https://drive.google.com/uc?export=view&id={{this.teacher.bground}})">
                 <div class="media align-items-end">
                     <div class="mr-3 mt-3">
-                        <img src="https://drive.google.com/uc?export=view&id={{this.teacher.avatar}}" alt="This's avatar" width="350" class="rounded-circle mb-2 img-thumbnail">
+                        <img style="width: 350px; height: 350px;" src="https://drive.google.com/uc?export=view&id={{this.teacher.avatar}}" alt="This's avatar" class="rounded-circle mb-2 img-thumbnail">
                         
                     </div>
                 </div>
@@ -15,24 +15,26 @@
                 </div>
             </div>
         </div>
-        <div class="bg-light p-4 d-flex justify-content-end">
-            <div class="list-inline mb-0" style="color: black;">
-                <li class="list-inline-item">
-                    <h5 class="font-weight-bold mb-0 d-block">{{this.teacher.numCourses}}</h5><small class="text-muted"> <i class="fa fa-book mr-1"></i>Courses</small>
+        <div class="bg-light p-4 row justify-content-between">
+            <div class="col-md-4 ml-0 pl-0">
+                <a href="/teacher/profile/edit?id={{this.teacher.teacherID}}" class="btn btn-outline-dark btn-lg btn-block"><i class="fa fa-edit">Edit profile</i></a>
+            </div>
+            <div class="list-inline mb-0 col-md-4 m-0 p-0" style="color: black;">
+                <li class="list-inline-item p-2 text-center">
+                    <h5 class="font-weight-bold mb-0">{{this.teacher.numCourses}}</h5><small class="text-muted"> <i class="fa fa-book mr-1"></i>Courses</small>
                 </li>
-                <li class="list-inline-item">
-                    <h5 class="font-weight-bold mb-0 d-block">{{this.teacher.totals_stu}}</h5><small class="text-muted"> <i class="fa fa-heart mr-1" style="color: red"></i>Students</small>
+                <li class="list-inline-item p-2 text-center">
+                    <h5 class="font-weight-bold mb-0">{{this.teacher.totals_stu}}</h5><small class="text-muted"> <i class="fa fa-heart mr-1" style="color: red"></i>Students</small>
                 </li>
-                <li class="list-inline-item">
-                    <h5 class="font-weight-bold mb-0 d-block">{{this.teacher.reviews}}</h5><small class="text-muted"> <i class="fa fa-star mr-1" style="color: yellowgreen">Reviews</i></small>
+                <li class="list-inline-item p-2 pr-0 text-center">
+                    <h5 class="font-weight-bold mb-0">{{this.teacher.reviews}}</h5><small class="text-muted"> <i class="fa fa-star mr-1" style="color: yellowgreen">Reviews</i></small>
                 </li>
-<a href="/teacher/profile/edit?id={{this.teacher.teacherID}}" class="btn btn-outline-dark btn-lg btn-block"><i class="fa fa-edit">Edit profile</i></a>
             </div>
         </div>
         <div class="px-4 py-3">
             <h4 id="#about" class="mb-1">About</h4>
             <div class="p-4 rounded shadow-sm bg-light">
-                {{this.teacher.description}}
+                {{{this.teacher.description}}}
             </div>
         </div>
         <div class="py-4 px-4">
@@ -53,14 +55,14 @@
                                     {{#each this.courses}}
                                         <div class="col-lg-4 mb-4">
                                             <a href="/course/{{courseID}}_{{courseName}}">
-                                                <div class="card" >
+                                                <div class="card" style="height: 320px;">
                                                         <img src="https://drive.google.com/uc?export=view&id={{image}}" alt="" class="card-img-top">
                                                     <div class="card-body">
                                                         <h5 class="card-title">{{courseName}}</h5>
-                                                        <p class="card-text">{{description}}</p>
-                                                        <a href="" class="btn btn-outline-success btn-sm">Edit</a>
-                                                        <a href="" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash"></i>Delete</a>
-                                                    </div>
+                                                        {{{description}}}
+                                                        <a href="/teacher/editCourse?id={{courseID}}" class="btn btn-outline-success btn-sm">Edit</a>
+                                                        <a href="/teacher/delCourse?id={{courseID}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash"></i>Delete</a>
+                                        </div>
                                                 </div>
                                             </a>
                                         </div>
