fix avatar frame

--- a/views/vwTeacher/editProfile.hbs
+++ b/views/vwTeacher/editProfile.hbs
@@ -134,15 +134,15 @@
 <body>
      <div class="col">
             <div class="row">
-                <div class="col mb-3">
-                    <div class="card">
-                        <div class="card-body">
+                <div class="col mb-3" style="">
+                    <div class="card" style="align-items: center;">
+                        <div class="card-body" style="width: 80%;">
                             <div class="e-profile">
-                                <div class="row" style="background-image: url(https://drive.google.com/uc?export=view&id={{this.teacher.bground}})">
+                                <div class="row" style="background-image: url(https://drive.google.com/uc?export=view&id={{this.teacher.bground}}); margin-bottom:2%">
                                     <div class="col-12 col-sm-auto mb-3">
                                         <div class="mx-auto" style="width: 340px;">
-                                            <div class="d-flex justify-content-center align-items-center rounded-circle" style="height: 340px; background-color: rgb(233, 236, 239);">
-                                                <img src="https://drive.google.com/uc?export=view&id={{this.teacher.avatar}}" alt="This's avatar" width="350" class="rounded-circle mb-2 img-thumbnail">
+                                            <div class="d-flex justify-content-center align-items-center rounded-circle" style="width: 270px; height: 270px; background-color: rgb(233, 236, 239); margin-top:20px">
+                                                <img style="width: 250px; height: 250px; margin-top: 8px" src="https://drive.google.com/uc?export=view&id={{this.teacher.avatar}}" alt="This's avatar" class="rounded-circle mb-2 img-thumbnail">
                                             </div>
                                         </div>
                                     </div>
