+ update home.hbs + add image to public

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,10 +1,15 @@
 <div class="w-100 p-2" style="width: 100%">
 
     <div class="row">
-        <div class="col-12 bg-transparent" style="height: 400px; width: 1340px ; background: #d9a7c7;  /* fallback for old browsers */
-        background: -webkit-linear-gradient(to right, #fffcdc, #d9a7c7);  /* Chrome 10-25, Safari 5.1-6 */
-        background: linear-gradient(to right, #fffcdc, #d9a7c7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-        ">
+        <div class="col-12 bg-transparent gradient-home">
+            <img class="img-thumbnail float-right mt-3 p-0 border-0" style="width: 500px;height: 350px" src="/imgs/posterHome.png" alt="posterHome">
+
+            <div class="jumbotron jumbotron-fluid mt-4 gradient-home">
+                <div class="container">
+                    <h1 class="display-4">Slow and steady</h1>
+                    <p class="lead">Try learning just 5–10 minutes a day. Continue your course and reach your peak potential.</p>
+                </div>
+            </div>
 
         </div>
     </div>
