--- a/views/vwUser/my-courses.hbs
+++ b/views/vwUser/my-courses.hbs
@@ -16,7 +16,7 @@
             <div class="row">
             {{#each course}}
             <div class="col-sm-3 mb-3 mt-3" type="button">
-                <a class="course-card-a" href="/course/detail?catID={{catID}}&id={{courseID}}">
+                <a class="course-card-a" href="/user-courses/detail?catID={{catID}}&id={{courseID}}">
                 <div class="course-card" style="height: 280px;">
                     <img class= "course-card-img" src="https://drive.google.com/uc?export=view&id={{image}}" alt="">
                     <h5 class="course-card-title">{{courseName}}</h5>
